# llm-cache-router

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: django_middleware.py  fastapi_basic.py  warmup_example.py
llm_cache_router/: __init__.py  cli.py  models.py  retry.py  router.py  warmup.py
llm_cache_router.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
llm_cache_router/cache/: base.py  memory.py  qdrant.py  redis.py
llm_cache_router/cost/: tracker.py
llm_cache_router/embeddings/: encoder.py
llm_cache_router/middleware/: fastapi.py
llm_cache_router/observability/: prometheus.py
llm_cache_router/pricing/: manager.py  pricing.json
llm_cache_router/providers/: __init__.py  anthropic.py  base.py  gemini.py  minimax.py  ollama.py  openai.py  qwen.py  registry.py
llm_cache_router/strategies/: cheapest.py  fallback.py  fastest.py
tests/: test_cost_tracker.py  test_http_metrics_middleware.py  test_memory_cache.py  test_pricing_manager.py  test_prometheus_metrics.py  test_provider_registry.py  test_qdrant_cache.py  test_redis_cache.py  test_retry.py  test_router.py  test_warmup.py
