[project]
name = "llm-cache-router"
version = "0.2.1"
description = "Semantic cache + LLM provider router + cost tracker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "tenacity>=9.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
qdrant = ["qdrant-client>=1.9"]
fastapi = ["fastapi>=0.111", "starlette>=0.37"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = ["llm-cache-router[redis,qdrant,fastapi]"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

