[project]
name = "llm-cache-router"
version = "0.2.2"
description = "Semantic cache, multi-provider LLM router and cost tracker (OpenAI, Anthropic, Gemini, Ollama, MiniMax, Qwen)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Sergey Valenchits", email = "valenchits@icloud.com" },
]
maintainers = [
    { name = "Sergey Valenchits", email = "valenchits@icloud.com" },
]
keywords = [
    "llm",
    "cache",
    "semantic-cache",
    "router",
    "openai",
    "anthropic",
    "gemini",
    "ollama",
    "minimax",
    "qwen",
    "cost-tracking",
    "fastapi",
    "prometheus",
    "ai",
    "async",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "numpy>=1.26",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
qdrant = ["qdrant-client>=1.9"]
fastapi = ["fastapi>=0.111", "starlette>=0.37"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=5.0",
]
all = ["llm-cache-router[redis,qdrant,fastapi]"]

[project.urls]
Homepage = "https://github.com/svalench/llm-cache-router"
Repository = "https://github.com/svalench/llm-cache-router"
Issues = "https://github.com/svalench/llm-cache-router/issues"
Changelog = "https://github.com/svalench/llm-cache-router/releases"
Documentation = "https://github.com/svalench/llm-cache-router#readme"

[project.scripts]
llm-cache-router = "llm_cache_router.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["llm_cache_router*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
llm_cache_router = ["py.typed", "pricing/pricing.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
